<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/auditing_message_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_fff1d4"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/auditing_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="实名认证，可以提高您的诚信值。"
            android:textColor="@color/gray_66" />

        <com.base.glide.GlideImageView
            android:id="@+id/auditing_message_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:onClick="onClick"
            android:src="@mipmap/close_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="8"
            android:paddingStart="10dp"
            android:text="@string/true_name"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="20"
                android:background="@null"
                android:enabled="false"
                android:gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType=""
                android:tag="@string/realname_tag"
                android:textColor="@color/gray_66"
                android:textSize="17dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="8"
            android:paddingStart="10dp"
            android:text="@string/card_no"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="21">

            <EditText
                android:id="@+id/identification_no"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_weight="20"
                android:background="@drawable/z_round_rect_gray_c9"
                android:digits="0123456789Xx"
                android:gravity="center_vertical"
                android:hint="@string/card_no_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="18"
                android:paddingStart="10dp"
                android:tag="identificationCard"
                android:textColor="@color/gray_66"
                android:textSize="17dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/identification_OK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/r_round_rect_solid_orange_ff7d01"
        android:onClick="onClick"
        android:text="立即认证"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>